Revision history for perl distribution {{$dist->name}}:

{{$NEXT}}

v1.2.1    2024-12-18 11:53:57+00:00 Europe/London
  [Documentation]
  - Fixed typo.

  - Renamed SECURITY-POLICY.md to SECURITY.md

  [Tests]
  - Added Perl::Critic configuration.

  [Other]
  - Include core modules in prerequisites.

v1.2.0    2024-12-06 19:31:53+00:00 Europe/London
  [Incompatible Changes]
  - Bumped minimum supported Perl version to v5.14.

  [Documentation]
  - Updated contributors section.

  - Fixed a typo.

  - Bumped copyright year.

  - Documented Perl version support policy.

  - Added SECURITY-POLICY.md to the distribution.

  [Other]
  - Remove requirement for MANIFEST.SKIP in build.

  - Sign the release.

v1.1.2    2022-03-04 19:22:27+00:00 Europe/London
  [Bug Fix]
  - Removed POD spelling release test altogether, GH#4.

v1.1.1    2022-03-04 10:37:07+00:00 Europe/London
  [Bug Fix]
  - Removed unnecessary use of Const::Fast from release test.

v1.1.0    2022-03-03 16:15:39+00:00 Europe/London
  [Enhancements]
  - Switched from Exporter::Lite to Exporter.

  [Documentation]
  - Fix encoding of links in README.

  - Removed reference to Object::Serializer, since it seems to have
    disappeared from CPAN.

  - Bump copyright year.

  [Toolchain]
  - Removed Travis-CI.

  [Other]
  - Removed bad rule from MANIFEST.SKIP.

  [Tests]
  - Remove legacy author tests from xt directory.

  - Change Pod::Spelling test to use File::Slurper.

  - Report version of JSON::PP, Object::Signature and File::Slurper, if installed.

v1.0.0    2020-12-11 14:10:46+00:00 Europe/London
  [Documentation]
  - Updated notes about encodings and numification.

  - Updated copyright year.

  - Adjusted POD markup.

  [Toolchain]
  - Update .gitignore rules.

v0.2.0    2019-02-17 19:14:41+00:00 Europe/London
  [Toolchain]
  - Adapted to use Dist::Zilla/Pod::Weaver.

  - Removed use of Module::Install.

v0.1.6  2014-09-14
  [Documentation]
  - Added more details about alternative encoders.
